# KrABMagaPersonalDev

./: .gitignore  README.md
examples/: Cargo.toml
examples/flockers/: Cargo.toml
examples/flockers/src/: main.rs
examples/flockers/src/visualization/: graphic_initializer.rs  mod.rs
examples/flockers_exp_1/: Cargo.toml
examples/flockers_exp_1/src/: main.rs
examples/flockers_exp_1/src/model/: bird.rs
examples/flockers_exp_1/src/visualization/: mod.rs
examples/flockers_fixed_visualization/: .gitignore
examples/wolfsheepgrass/: Cargo.toml
examples/wolfsheepgrass/src/: main.rs  old.rs
examples/wolfsheepgrass/src/model/: animal.rs  animals.rs  debug.rs  mod.rs  sheep.rs  state.rs  wolf.rs
examples/wolfsheepgrass_exp_3/: Cargo.toml
examples/wolfsheepgrass_exp_3/src/: main.rs  old.rs
examples/wolfsheepgrass_exp_3/src/model/: animals.rs
examples/wolfsheepgrass_exp_4/: Cargo.toml
examples/wolfsheepgrass_exp_4/src/: main.rs
examples/wolfsheepgrass_exp_5/: Cargo.toml
examples/wolfsheepgrass_exp_5/src/: main.rs
examples/wolfsheepgrass_exp_5/src/model/: state.rs  wolf.rs
examples/wolfsheepgrass_exp_6/: Cargo.toml
examples/wolfsheepgrass_exp_6/src/: main.rs
examples/wolfsheepgrass_exp_7/: Cargo.toml
examples/wolfsheepgrass_exp_7/src/: main.rs
examples/wolfsheepgrass_exp_8/: Cargo.toml
examples/wolfsheepgrass_exp_8/src/: main.rs
examples/wolfsheepgrass_exp_8/src/model/: debug.rs
experiments_doc/: experiment_3.md
experiments_doc/flockers/: fixed_visualization.md
experiments_doc/wolfsheepgrass/: DeleteSpawnAgentSystem(exp_7-8).excalidraw  experiment_4.md  experiment_5.md  experiment_6.md  experiment_7.md  experiment_8.md
krABMaga/: Cargo.toml
krABMaga/src/: lib.rs
krABMaga/src/engine/: agent.rs  mod.rs  resources.rs  rng.rs  simulation.rs  systems.rs  thread_id.rs
krABMaga/src/utils/: mod.rs
krABMaga/src/visualization/: asset_handle_factory.rs  graphic_initializer.rs  mod.rs  simulation_descriptor.rs  visualization.rs  visualization_state.rs  wrappers.rs
(+26 files in other folders)
