[workspace]
resolver = "2"

members = [
    "antsforaging",
    "flockers_fixed_visualization",
    "flockers_mpi",
    "forestfire",
    "forestfire_bayesian",
    "schelling",
    "sir_ga_exploration",
    "sugarscape",
    "template",
    "virusnetwork",
    "wolfsheepgrass",

    # ECS's experiment
    "wolfsheepgrass_exp_3",
    "wolfsheepgrass_exp_4",
    "wolfsheepgrass_exp_5",
    "wolfsheepgrass_exp_6",
    "wolfsheepgrass_exp_7",
    "wolfsheepgrass_exp_8",
]
