[package]
name = "wolfsheepgrass_exp_6"
version = "0.3.0"
authors = [
    "Carmine Spagnuolo <spagnuolocarmine@gmail.com>", 
    "Alessia Antelmi <aantelmi@unisa.it>", 
    "Matteo D'Auria <matdauria@unisa.it>", 
    "Daniele De Vinco <danieledevinco1996@gmail.com", 
    "Francesco Foglia <frafonia@gmail.com>", 
    "Pasquale Caramante <pasqcaramante@gmail.com>", 
    "Luca Postiglione <lucapostiglione10@gmail.com>", 
    "Giuseppe D'Ambrosio <giuseppe.dambrosio14@gmail.com>"
]
edition = "2021"
license = "MIT"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
krabmaga = {path = "../../krABMaga"}
# bevy = "0.13.0"
rayon = "1.10.0"
lazy_static = "1.5.0"

[features]
visualization = ["krabmaga/visualization"]
visualization_wasm = ["krabmaga/visualization_wasm"]
# Added by me to handle the debug print supports
debug_support = []
# Added by me to perform fixed
fixed_random = [] 